fixed acknowledge request's drop-down menu not showing

--- a/public_records_portal/static/style/css/screen.css
+++ b/public_records_portal/static/style/css/screen.css
@@ -730,7 +730,7 @@ p
 	margin-bottom:20px;
 	font-size:21px;
 	font-weight:200;
-	line-height:30px
+	line-height:30px;
 }
 
 small
